# modal_shortcuts

./: README.md  __init__.py  object.py  preferences.py  pyproject.toml  shortcuts.py
.github/workflows/: python-package.yml
modal_shortcuts/: __init__.py  object.py  operators.py  preferences.py  shortcuts.py
src/: operators.py
tests/: test_prefs.py
