[tool.poetry]
name = "modal_shortcuts"
version = "0.1.1"
description = "Keyboard shortcuts for modal operators."
authors = ["0djentd"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/0djentd/modal_shortcuts"
repository = "https://github.com/0djentd/modal_shortcuts"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
